# full-template

./: .gitignore  .prettierignore  README.md  package.json  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: sample-backend.yml  sample-frontend.yml
apps/sample/backend/: Cargo.toml  Dockerfile  package.json
apps/sample/backend/src/: main.rs
apps/sample/backend/tests/: integration_test.rs
apps/sample/docs/: docusaurus.config.js  package.json  sidebars.js
apps/sample/docs/docs/: api.md  architecture.md  deployment.md  getting-started.md  intro.md
apps/sample/docs/src/pages/: index.js  index.module.css
apps/sample/frontend/: .eslintrc.cjs  package.json  playwright.config.ts
apps/sample/frontend/src/routes/: +layout.svelte  +page.svelte
apps/sample/frontend/tests/: example.spec.ts
apps/sample/frontend/tests/helpers/: api-mocks.ts  setup.ts
shared/docs/: docusaurus.config.js  package.json  sidebars.js
shared/docs/docs/: intro.md
shared/docs/src/css/: custom.css
shared/docs/src/pages/: index.js  index.module.css
